Minimal core server is starting with no classes in the classpath